--- a/S2_HW31.03.21.csproj
+++ b/S2_HW31.03.21.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>S2_HW31._03._21</RootNamespace>
   </PropertyGroup>
 
